<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp">
            <EditText
                android:id="@+id/secondLine1"
                android:layout_width="fill_parent"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:singleLine="true"
                android:layout_marginRight="54dp"
                android:hint="@string/teach_input_hint"
                android:layout_marginLeft="54dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/firstLine1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/secondLine1"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_alignWithParentIfMissing="true"
                android:gravity="right"
                android:text="@string/me"
                android:layout_marginRight="54dp"
                android:textSize="16sp" />
            <ImageView
                android:id="@+id/icon1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="-48dip"
                android:contentDescription="TODO"
                android:layout_toRightOf="@id/firstLine1"
                android:src="@drawable/ic_launcher"
                />



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            >


            <ImageView
                android:id="@+id/icon2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="6dip"
                android:contentDescription="TODO"
                android:src="@drawable/ic_launcher" />

            <EditText
                android:id="@+id/secondLine2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/icon2"
                android:layout_marginRight="54dp"
                android:singleLine="true"
                android:hint="@string/teach_reply_hint"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/firstLine2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/secondLine2"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_alignWithParentIfMissing="true"
                android:layout_toRightOf="@id/icon2"
                android:gravity="center_vertical"
                android:text="@string/mumu"
                android:textSize="16sp" />

        </RelativeLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="สอนศัพท์ใหม่"
            android:id="@+id/buttonSignIn"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_front" />
    </LinearLayout>
</RelativeLayout>